--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,29 @@
+# change default port
+# serveur.port 80
 
+# Database configuration for postgresql
+
+spring.datasource.url = jdbc:postgresql://localhost:5432/chess
+spring.datasource.username = chess
+spring.datasource.password = chess
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+# disable this lines to redirect logs in a rolling file
+#if no active profile, default is 'default'
+#spring.profiles.active=prod
+
+#root level
+#logging.level.=INFO
+
+# SQL request logs from Hibernate
+# logging.level.org.hibernate.SQL = DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder = TRACE
+
+# Session configuration
+spring.session.store-type=jdbc
+#spring.session.store-type=core
+spring.session.jdbc.initialize-schema=always
